--- a/404.html
+++ b/404.html
@@ -13,6 +13,6 @@ permalink: /404.html
 </style>
 
 <div class="container">
-  <p><strong>Page not found :(</strong></p>
-  <p>I'm sorry. We couldn't find the page you are looking for.</p>
+  <p><strong>The current page is not found.</strong></p>
+  <p>Sorry, we couldn't find the page you are looking for...</p>
 </div>
